--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<body class="bg-primary">
 		<div class="h-screen w-full flex items-center justify-center">
 			<div
-				class="bg-white rounded-xl max-w-sm px-4 py-5 flex flex-col gap-4 border border-black shadow-[10px_10px_rgba(0,0,0,1)] mx-4 md:mx-0"
+				class="bg-white group cursor-pointer rounded-xl max-w-sm px-4 py-5 flex flex-col gap-4 border border-black shadow-[10px_10px_rgba(0,0,0,1)] mx-4 md:mx-0 hover:shadow-[15px_15px_rgba(0,0,0,1)] transition-all duration-200 ease-out]"
 			>
 				<figure class="h-full w-full overflow-hidden rounded-xl">
 					<img
@@ -30,7 +30,11 @@
 					>Learning</span
 				>
 				<p class="text-sm">Published 21 Dec 2023</p>
-				<h5 class="text-2xl font-bold">HTML & CSS foundations</h5>
+				<h5
+					class="text-2xl font-bold group-hover:text-primary transition-all duration-200 ease-out"
+				>
+					HTML & CSS foundations
+				</h5>
 				<p class="text-secondary">
 					These languages are the backbone of every website, defining structure,
 					content, and presentation.
