final changes in qr-code-component

--- a/qr-code-component/with-tailwindcss/src/index.html
+++ b/qr-code-component/with-tailwindcss/src/index.html
@@ -26,7 +26,7 @@
 	<body>
 		<div class="bg-lightGray h-screen w-full flex items-center justify-center">
 			<div
-				class="bg-white flex flex-col items-center p-4 rounded-xl max-w-sm mx-auto gap-5"
+				class="bg-white flex flex-col items-center p-4 rounded-xl max-w-sm mx-auto gap-5 shadow shadow-lightGray shadow-lg"
 			>
 				<img
 					src="./../images/image-qr-code.png"
